Implement storage cdi resolution mechanism